--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "npm": ">=10.9.4"
   },
   "dependencies": {
-    "@whiskeysockets/baileys": "^7.0.0-rc.9",
+    "@whiskeysockets/baileys": "github:WhiskeySockets/Baileys",
     "awesome-phonenumber": "^4.4.0",
     "axios": "^0.24.0",
     "better-sqlite3": "^12.4.1",
