--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "form-data": "^4.0.0",
     "formdata-node": "^5.0.0",
     "gradient-string": "^2.0.2",
+    "grapheme-splitter": "^1.0.4",
     "human-readable": "^0.2.1",
     "jimp": "latest",
     "lodash": "latest",
