--- a/package.json
+++ b/package.json
@@ -21,45 +21,45 @@
     "multi-device"
   ],
   "engines": {
-    "node": ">=22.0.0",
+    "node": "^20.0.0 || >=22.0.0",
     "npm": ">=10.0.0"
   },
   "dependencies": {
-    "@whiskeysockets/baileys": "github:WhiskeySockets/Baileys",
-    "awesome-phonenumber": "^4.4.0",
-    "axios": "^0.24.0",
-    "better-sqlite3": "^12.4.1",
-    "boxen": "latest",
-    "canvas": "latest",
+    "@whiskeysockets/baileys": "^6.7.21",
+    "awesome-phonenumber": "^6.8.0",
+    "axios": "^1.7.9",
+    "better-sqlite3": "^11.8.1",
+    "boxen": "^8.0.1",
+    "canvas": "^2.11.2",
     "cfonts": "^3.3.0",
-    "chalk": "^4.1.2",
-    "dotenv": "^17.2.3",
-    "express": "^4.19.2",
-    "fluent-ffmpeg": "^2.1.2",
-    "form-data": "^4.0.0",
-    "formdata-node": "^5.0.0",
+    "chalk": "^5.3.0",
+    "dotenv": "^16.4.5",
+    "express": "^4.21.2",
+    "fluent-ffmpeg": "^2.1.3",
+    "form-data": "^4.0.1",
+    "formdata-node": "^6.0.3",
     "gradient-string": "^2.0.2",
     "grapheme-splitter": "^1.0.4",
     "human-readable": "^0.2.1",
-    "jimp": "latest",
-    "lodash": "latest",
-    "megajs": "^1.1.3",
-    "moment": "^2.29.4",
-    "moment-timezone": "^0.5.37",
-    "node-cache": "latest",
-    "node-fetch": "^2.6.1",
-    "node-id3": "^0.2.9",
+    "jimp": "^0.22.12",
+    "lodash": "^4.17.21",
+    "megajs": "^1.1.4",
+    "moment": "^2.30.1",
+    "moment-timezone": "^0.5.46",
+    "node-cache": "^5.1.2",
+    "node-fetch": "^3.3.2",
+    "node-id3": "^0.2.6",
     "node-webpmux": "^3.2.0",
-    "pino": "^8.8.0",
+    "pino": "^9.5.0",
     "qrcode-terminal": "^0.12.0",
     "ruhend-scraper": "^7.0.4",
-    "sharp": "latest",
+    "sharp": "^0.33.5",
     "syntax-error": "^1.4.0",
-    "util": "^0.12.4",
-    "uuid": "^10.0.0",
+    "util": "^0.12.5",
+    "uuid": "^11.0.3",
     "wa-sticker-formatter": "^4.4.4",
-    "yargs": "17.7.2",
-    "yargs-parser": "21.1.1",
-    "yt-search": "^2.13.1"
+    "yargs": "^17.7.2",
+    "yargs-parser": "^21.1.1",
+    "yt-search": "^2.12.1"
   }
 }
