--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "canvas": "^2.11.2",
     "cfonts": "^3.3.0",
     "chalk": "^5.3.0",
+    "cheerio": "^1.2.0",
     "dotenv": "^16.4.5",
     "express": "^4.21.2",
     "fluent-ffmpeg": "^2.1.3",
@@ -42,6 +43,7 @@
     "grapheme-splitter": "^1.0.4",
     "human-readable": "^0.2.1",
     "jimp": "^0.22.12",
+    "jsdom": "^28.1.0",
     "lodash": "^4.17.21",
     "megajs": "^1.1.4",
     "moment": "^2.30.1",
