--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "npm": ">=10.0.0"
   },
   "dependencies": {
-    "@whiskeysockets/baileys": "^6.7.21",
+    "@whiskeysockets/baileys": "^7.0.0-rc.9",
     "awesome-phonenumber": "^6.8.0",
     "axios": "^1.7.9",
     "better-sqlite3": "^11.8.1",
